# openoma-server

./: .dockerignore  Containerfile  LICENSE  Makefile  README.md  main.py  podman-compose.yml  pyproject.toml
.github/: copilot-instructions.md
podman/: Dockerfile.backend  Dockerfile.ui  compose.full.yml  compose.yml  nginx.conf
scripts/: load_scenarios.py  seed_data.py
src/openoma_server/: app.py  config.py  database.py  settings.py
src/openoma_server/auth/: __init__.py  backend.py  context.py  middleware.py  permissions.py  policies.py
src/openoma_server/db/: connection.py
src/openoma_server/graphql/: context.py  resolvers.py  schema.py
src/openoma_server/models/: __init__.py  canvas_layout.py  contract.py  converters.py  embedded.py  execution.py  flow.py  flow_draft.py  work_block.py
src/openoma_server/services/: canvas.py  canvas_layout.py  contract.py  event_store.py  execution.py  flow.py  flow_draft.py  pubsub.py  required_outcome.py  work_block.py
src/openoma_server/store/: __init__.py  definition_store.py  event_store.py  execution_store.py
tests/: conftest.py
tests/test_auth/: test_auth.py
tests/test_graphql/: test_api.py  test_canvas_queries.py  test_schema.py
tests/test_services/: test_canvas_layout.py  test_contract.py  test_execution.py  test_execution_pubsub.py  test_flow.py  test_flow_draft.py  test_pubsub.py  test_work_block.py  test_work_block_service.py
tests/test_store/: test_batch_queries.py  test_cursor_pagination.py  test_definition_store.py  test_event_store.py  test_execution_store.py
ui/: Containerfile  codegen.ts  index.html  nginx.conf  package-lock.json  package.json  plan.md  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/graphql/: client.ts  subscriptions.ts
ui/src/hooks/: useEntity.ts
ui/src/pages/: ContractDetailPage.tsx  ContractsPage.tsx  (+10 more)
(+102 files in other folders)
