[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openoma-server"
version = "0.1.0"
description = "GraphQL server for the Openoma (Opera Autonoma) operational process framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openoma>=0.1.1",
    "strawberry-graphql[fastapi]>=0.262.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "beanie>=1.29.0",
    "pymongo>=4.12.0",
    "pydantic-settings>=2.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "mongomock-motor>=0.0.34",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.hatch.build.targets.sdist]
exclude = ["ui/", "tests/", "scripts/", "podman/", ".github/"]

[tool.hatch.build.targets.wheel]
packages = ["src/openoma_server"]
